update 1.01 -> pequeno ajuste no css.

--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ main {
     background: var(--background-div);
     text-align: center;
     border-radius: 10px;
-    box-shadow: 15px 15px 30px 10px var(--fontDestaque);
+    box-shadow: 10px 10px 15px 15px var(--fontColor);
 }
 
 textarea {
